# transpiler002

./: .flake8  .gitignore  Jenkinsfile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: poetry.yml  python-package.yml
example/: input01.py
src/tests/: test_generation.py
src/tests/example/: input01.py
src/transpile/: details.py  generator.py  modular.py
test/: test_generation.py
tests/: test_generation.py
tests/example/: input01.py
transpile/: __init__.py  __main__.py  details.py  generator.py  ir_nodes.py  modular.py
