[tool.poetry]
name = "transpile"
version = "0.1.0"
description = ""
authors = ["John Vishnefske <jvishnefske@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cppyy = "3.1.2"
Jinja2 = "3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
